docs: round 16 — probed the SIMD frontier; viable API but needs a Java hot loop
Engaged the long-deferred hardware-SIMD multi-buffer frontier with a feasibility probe.
Findings:
- jdk.incubator.vector loads on JDK 24; IntVector.SPECIES_PREFERRED = 4 lanes (Apple Silicon
  ARM NEON, S_128); broadcast/add/xor/shift/or produce correct lane values. A 4-way multi-buffer
  (~4x/core in principle) is possible.
- BUT a performant Clojure port is blocked: Vector API calls (.lanewise/.lane/broadcast) REFLECT
  through loop/recur locals (confirmed via *warn-on-reflection*), so every op reflects and even a
  tight 25M-iter register-resident loop won't complete in 80s; plus the immutable-IntVector style
  allocates per op. Removing reflection needs pervasive ^IntVector hinting through the 16-64-vector
  schedule/state loops -- impractical; the clean fix is a Java hot loop.
- Unverified: whether C2 intrinsifies the Vector API on aarch64 (NEON) as well as x86 AVX.

Conclusion: SIMD is real (4 lanes) but a dedicated Java effort outside this repo's idiomatic-
Clojure setting -- qualitatively bigger than the fast paths (which stayed in Clojure/cljs). Stays
open, now SCOPED (4 lanes / Java hot loop / NEON intrinsics TBD) rather than hand-waved. No code
artifact -- the probe showed the naive Clojure approach is the wrong tool, so nothing broken was
committed (measure-first discipline to the end).

Meta (rounds 1-16): the co-scientist search is complete for everything reachable in idiomatic
portable Clojure -- one single-hash lever (per-op overhead), one structural mining win (midstate),
one across-core axis (threads, hardware-frequency-bounded), all bit-identical and grounded against
the real genesis block, plus a list of measured/rejected dead ends. The last frontier is probed
and bounded.

Co-Authored-By: Claude Opus 4.8 (1M context)